Fixed bug where the Start button couldn't be clicked on mobile because the snackbar would be on top of it

--- a/src/components/Snackbar/snackbar.module.css
+++ b/src/components/Snackbar/snackbar.module.css
@@ -76,5 +76,6 @@
   100% {
     bottom: 0;
     opacity: 0;
+    visibility: hidden;
   }
 }
